--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@chakra-ui/react": "^3.0.0",
     "@heroicons/react": "^2.1.5",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,16 +20,22 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.9",
+    "leva": "^0.9.35",
     "lodash.throttle": "^4.1.1",
+    "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.2",
     "react-slick": "^0.30.2",
+    "react-tooltip": "^5.28.0",
     "screenfull": "^6.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
+    "three": "^0.169.0",
+    "twin.macro": "^3.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -59,6 +69,8 @@
     "@types/react-slick": "^0.23.13",
     "@types/screenfull": "^4.1.0",
     "@types/styled-components": "^5.1.34",
+    "@types/three": "^0.169.0",
+    "source-map-loader": "^4.0.2",
     "tailwindcss": "^3.4.14"
   }
 }
